<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.psu.jeh5723.lab2.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/emailLabel"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSubject"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/emailSubjectHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/emailAddressHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/complexityLabel"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSubject" />

    <Spinner
        android:id="@+id/dataStructureSpinner"
        android:layout_width="212dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:entries="@array/dataStructureTypes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/dataStructure"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/operations"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/checkBoxInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/insert"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxSearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxGetMin"
        app:layout_constraintTop_toTopOf="@+id/checkBoxGetMin" />

    <CheckBox
        android:id="@+id/checkBoxGetMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/getMin"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxInsert"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/checkBoxSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/search"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxInsert"
        app:layout_constraintTop_toTopOf="@+id/checkBoxGetMin" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/worstCase"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxGetMin" />

    <RadioGroup
        android:id="@+id/radioCase"
        android:layout_width="249dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBoxGetMin"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButtonWorstCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/worstCaseOption"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="349dp" />

        <RadioButton
            android:id="@+id/radioButtonAverageCase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avgCase"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            tools:layout_editor_absoluteY="349dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ResultLabel"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toTopOf="@+id/textViewToLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSubjectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/subject"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintBottom_toTopOf="@+id/textViewResults"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textViewToLabel"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/to"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        app:layout_constraintBottom_toTopOf="@+id/textViewSubjectLabel"
        app:layout_constraintStart_toStartOf="@+id/textViewSubjectLabel" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="sendMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <TextView
        android:id="@+id/textViewResults"
        android:layout_width="263dp"
        android:layout_height="95dp"
        android:layout_marginBottom="16dp"
        android:freezesText="false"
        android:lines="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewSubjectLabel" />

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:freezesText="false"
        app:layout_constraintBottom_toTopOf="@+id/textViewSubject"
        app:layout_constraintStart_toStartOf="@+id/textViewSubject" />

    <TextView
        android:id="@+id/textViewSubject"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:freezesText="false"
        app:layout_constraintBottom_toTopOf="@+id/textViewResults"
        app:layout_constraintStart_toEndOf="@+id/textViewSubjectLabel" />

</android.support.constraint.ConstraintLayout>
